# arithmatic

./: LICENSE  Main.hs  README.md  arithmatic.cabal  arithmatic.hs
Math/: Arithmatic.hs
