name: arithmatic
version: 0.1.0.1
cabal-version: >=1.10
build-type: Simple
license: UnspecifiedLicense
license-file: LICENSE
maintainer: hawk.alan@gmail.com
author: Alan Hawkins
extra-source-files:
    README.md

source-repository head
    type: git
    location: http://github.com/xpika/arithmatic.git

library
    build-depends:
        base >=4.6 && <4.7
    default-language: Haskell2010


